客户专员修改

--- a/src/main/webapp/static/mobile/css/app.css
+++ b/src/main/webapp/static/mobile/css/app.css
@@ -717,6 +717,8 @@ body{font-size: 15px;color:#3b3b3b;}
 .commodity div.lineStyle input {width:80%}
 #foot{display: flex;}
 #foot div{flex: 6;}
+/*订单修改-内容样式:*/
+#payMents{padding-bottom: 0px;}
 /*订单管理--备注:*/
 .mui-input-row .staPoRemark{border: 1px solid #ccc;margin:5px 5px 5px -5px;border-radius: 5px;width:45%;float:left;overflow: auto;height:80px}
 .step_items {margin: 4px;margin-top: 0;font-size: 12px;border-bottom: 1px solid #ccc;color:#000;}
