--- a/src/main/webapp/static/mobile/css/app.css
+++ b/src/main/webapp/static/mobile/css/app.css
@@ -753,4 +753,6 @@ input[type="radio"].searchRadio:checked {-webkit-appearance: none;background-col
 /*改变 ios 默认checkbox样式 */
 input[type=checkbox].testCheckbox {-webkit-appearance: none;position: relative;top: 12px;width: 17px;height: 17px;border: 1px solid #999;-webkit-border-radius: 50%;border-radius: 50%;background-color: #fff;vertical-align: middle;float: left;}
 input[type="checkbox"].testCheckbox:checked {-webkit-appearance: none;background-color: #40ABE9;}
-
+/*二维码图片*/
+.codeBox{width:200px;height:200px;position: absolute;top:50%;left:50%;margin-top:-100px;margin-left:-100px;}
+.codeBox img{width:100%;height:100%;}
